Fix network info windows on mobile

--- a/themes/manifeste2017/static/src/sass/modules/_map-infowindow.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_map-infowindow.scss
@@ -55,6 +55,10 @@ $module: ".map-infowindow";
     background: $color-main;
     width: 512px;
 
+    @include mq($until: sm) {
+        width: 100% !important;
+    }
+
     &__content {
 
         //float: left;
